--- a/requirements.txt
+++ b/requirements.txt
@@ -1,5 +1,7 @@
 #python-dotenv=1.0.1
 streamlit
+langchain-core==0.1.0
+scikit-learn==1.2.0  # For lightweight alternative
 sentence-transformers
 transformers
 torch
